tests/testerina-integration-test/src/test/resources/command-outputs/unix/MockTest-testObjectMocking_NegativeCases1.txt
Compiling source
	intg_tests/object_mocking:0.0.0
WARNING [modules/TestHttpClient/main.bal:(54:45,54:82)] this function should explicitly return a value (BCE20350)
   |
54 |     public isolated function next() returns record {|AttributeDAO value;|}|Error? {
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

WARNING [main.bal:(47:5,47:47)] unused variable 'closeErr' (BCE20403)
   |
47 |     error? closeErr = attributeStream.close();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Running Tests with Coverage

	object_mocking

testDefaultIncompatibleArgs has failed.


		Test execution time :*****ms


		[fail] testDefaultIncompatibleArgs:

		    error {ballerina/test:0}FunctionSignatureMismatchError ("incorrect type of argument provided at position '1' to mock the function 'get()'")
				callableName: validateArgumentsExt moduleName: ballerina.test.0 fileName: mock.bal lineNumber: 346
				callableName: withArguments moduleName: ballerina.test.0.MemberFunctionStub fileName: mock.bal lineNumber: 132
				callableName: testDefaultIncompatibleArgs moduleName: intg_tests.object_mocking$test.0.tests.main_error_test fileName: tests/main_error_test.bal lineNumber: 56
				callableName: testDefaultIncompatibleArgs$lambda3$ moduleName: intg_tests.object_mocking$test.0.tests.test_execute-generated_*****lineNumber: 7
			


		0 passing
		1 failing
		0 skipped

Generating Test Report*****project-based-tests/object-mocking-tests/target/report/test_results.json

error: there are test failures